# nba-scorigami

./: .gitignore  pyproject.toml
nba_scorigami/bot/: main.py
nba_scorigami/database/: connection.py  scrape.py
