[tool.poetry]
name = "nba-scorigami"
version = "0.1.0"
description = ""
authors = ["svruddar <svrdev26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
bs4 = "^0.0.1"
html5lib = "^1.1"
mysql-connector-python = "^8.2.0"
isort = "^5.13.2"
requests = "^2.31.0"
redis = "^5.0.1"
requests-oauthlib = "^1.3.1"
flask = "^3.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
